...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="Reset"
        app:layout_constraintEnd_toStartOf="@+id/novaBiljkaBtn"
        app:layout_constraintStart_toEndOf="@+id/modSpinner"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/biljkeRV"
        android:layout_width="0dp"
...
